# ls

./: CMakeLists.txt  Makefile
inc/: constant.h  dependencies.h  ft_ls.h  prototype.h  struct.h  test.h
src/: exit.c  free.c  heap_1.c  heap_2.c  help_print.c  init.c  list.c  main.c  out.c  print.c  sort.c  stack.c  work.c
